# wsl-usb-gui

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  gui.py  pyproject.toml  setup.cfg  setup.py  usb_monitor.py
briefcase-template/{{ cookiecutter.dir_name }}/: briefcase.wxs
briefcase-template/{{ cookiecutter.dir_name }}/content/: WSL_USB_debug.bat
wsl_usb_gui/: __main__.py  gui.py  install.py  usb_monitor.py  version.py
